--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/cache-manager": "^2.2.2",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.2.0",
+    "@types/cache-manager": "^4.0.6",
+    "@types/cache-manager-redis-store": "^2.0.4",
+    "cache-manager": "^5.5.2",
+    "cache-manager-redis-store": "^3.0.1",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
