--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "npm run build && npx typeorm -d dist/src/dataSource/dataSource.js",
-    "migration:generate": "npm run typeorm -- migration:generate",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:create": "npm run typeorm -- migration:generate",
+    "migration:up": "npm run typeorm -- migration:run",
+    "migration:down": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.2.2",
