--- a/src/common/config/development.env
+++ b/src/common/config/development.env
@@ -1,3 +1,17 @@
+################## REDIS ####################################
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=
+
+
+################### MAIN ####################################
+PORT=8080
+
+
+################### DATA BASE ###############################
+DB_DATABASE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=1234
+DB_DATABASE=postgres
