User Registration added. need to add data validations.

--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.5.2",
     "cache-manager-redis-store": "^3.0.1",
     "dotenv": "^16.4.5",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typescript-class-validator": "^0.0.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
