--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "cache-manager": "^5.5.2",
     "cache-manager-redis-store": "^3.0.1",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "typescript-class-validator": "^0.0.6"
+    "typescript-class-validator": "^0.0.6",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
