--- a/src/common/config/development.env
+++ b/src/common/config/development.env
@@ -15,3 +15,9 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=1234
 DB_DATABASE=postgres
+
+
+################### LOGGING #################################
+LOG_LEVEL=debug
+ENABLE_LOGGING=false
+LOG_PATH=./logs/META-%DATE%.log
