Updated Entities and database name and updated migrations. user registration completed.

--- a/src/common/config/development.env
+++ b/src/common/config/development.env
@@ -9,12 +9,11 @@ PORT=8080
 
 
 ################### DATA BASE ###############################
-DB_DATABASE=postgres
+DB_DATABASE=shop-chat
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=1234
-DB_DATABASE=postgres
 
 
 ################### LOGGING #################################
